--- a/wpa_supplicant/aidl/android.hardware.wifi.supplicant-service.rc
+++ b/wpa_supplicant/aidl/android.hardware.wifi.supplicant-service.rc
@@ -6,6 +6,7 @@ service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
 	#   user wifi
 	#   group wifi inet keystore
 	interface aidl android.hardware.wifi.supplicant.ISupplicant/default
+	interface aidl vendor.qti.hardware.wifi.supplicant.ISupplicantVendor/default
 	class main
 	socket wpa_wlan0 dgram 660 wifi wifi
 	disabled
