DPP: Enable CONFIG_DPP3 to support Easy Connect R3 program
Add CONFIG_DPP3 in android.config to allow Easy connect R3 program.

Change-Id: Idba19c49d50c287e6e0c1e37741060c4f62cac00
CRs-Fixed: 3484003

--- a/wpa_supplicant/android.config
+++ b/wpa_supplicant/android.config
@@ -543,9 +543,10 @@ CONFIG_ERP=y
 # Opportunistic Wireless Encryption (OWE)
 CONFIG_OWE=y
 
-# Easy Connect (Device Provisioning Protocol - DPP R1 & R2)
+# Easy Connect (Device Provisioning Protocol - DPP R1 & R2 & R3)
 CONFIG_DPP=y
 CONFIG_DPP2=y
+CONFIG_DPP3=y
 
 # WPA3-Personal (SAE)
 CONFIG_SAE=y
