--- a/wpa_supplicant/android.config
+++ b/wpa_supplicant/android.config
@@ -551,6 +551,9 @@ CONFIG_DPP3=y
 # WPA3-Personal (SAE)
 CONFIG_SAE=y
 
+# PASN
+CONFIG_PASN=y
+
 #SuiteB
 CONFIG_SUITEB=y
 # WPA3-Enterprise (SuiteB-192)
