AP: Add configuration option to specify the desired MLD address
Add mld_addr configuration option to set the MLD MAC address.
The already existing bssid configuration option can be used to
control the AP MLD's link addresses.

Signed-off-by: Ilan Peer <ilan.peer@intel.com>
Signed-off-by: Andrei Otcheretianski <andrei.otcheretianski@intel.com>
Signed-off-by: Manaswini Paluri <quic_mpaluri@quicinc.com>
CRs-Fixed: 3587514
Git-repo: git://w1.fi/hostap.git
Git-commit: 763a19286e2f67e7ecaa3fea3e4b854dcb690ac6
Change-Id: If8594a87cdd1da8977b8bd07932fcd7502b94c49

--- a/hostapd/hostapd.conf
+++ b/hostapd/hostapd.conf
@@ -1048,6 +1048,12 @@ wmm_ac_vo_acm=0
 # MLD ID - Affiliated MLD ID
 #mld_id=1
 
+# AP MLD MAC address
+# The configured address will be set as the interface hardware address and used
+# as the AP MLD MAC address. If not set, the current interface hardware address
+# will be used as the AP MLD MAC address.
+#mld_addr=02:03:04:05:06:07
+
 ##### IEEE 802.1X-2004 related configuration ##################################
 
 # Require IEEE 802.1X authorization
